--- a/app/src/main/res/menu/actionbar_actions.xml
+++ b/app/src/main/res/menu/actionbar_actions.xml
@@ -4,7 +4,7 @@
 
     <item
         android:id="@+id/action_search"
-        android:icon="@drawable/cat"
+        android:icon="@drawable/menu_search"
         android:title="Search"
         android:orderInCategory="102"
         app:showAsAction="always|withText"
