--- a/app/src/main/res/layout/activity_dog_main.xml
+++ b/app/src/main/res/layout/activity_dog_main.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     tools:context=".DogMainActivity">
 
-    <LinearLayout
+   <!-- <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -62,7 +62,7 @@
             android:id="@+id/tv_desk_kor"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
-    </LinearLayout>
+    </LinearLayout>-->
 
     <!--리사이클러뷰
     <android.support.v7.widget.RecyclerView
