--- a/app/src/main/res/menu/activity_actionbar_search.xml
+++ b/app/src/main/res/menu/activity_actionbar_search.xml
@@ -7,7 +7,7 @@
         android:icon="@drawable/menu_search"
         android:title="Search"
         android:orderInCategory="102"
-        app:showAsAction="always|withText"
+        app:showAsAction="always"
         app:actionViewClass="androidx.appcompat.widget.SearchView"/>    <!--검색기능구현-->
 
 </menu>
