--- a/app/src/main/res/layout/activity_popup.xml
+++ b/app/src/main/res/layout/activity_popup.xml
@@ -13,13 +13,14 @@
         android:layout_height="200dp"
         android:background="@android:color/darker_gray"
         android:orientation="horizontal">
+
         <ImageView
             android:id="@+id/imageView1"
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:layout_gravity="center"
             android:layout_margin="50dp"
-            android:background="@drawable/cat" />
+            android:background="@android:color/transparent" />
     </LinearLayout>
     <!-- //end 타이틀바 -->
 
@@ -31,12 +32,16 @@
         android:orientation="vertical"
         android:padding="24dp">
 
+        <TextView
+            android:id="@+id/txtName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
             <TextView
-                android:id="@+id/txtPopup"
+                android:id="@+id/txtDesc"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="3dp"
