--- a/app/src/main/res/layout/activity_dog_main.xml
+++ b/app/src/main/res/layout/activity_dog_main.xml
@@ -3,13 +3,12 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#ffffff"
-    android:id="@+id/drawer_layout"
-    tools:context=".DogMainActivity">
-    <!-- 안에 자유롭게 꾸며보세요 ㅎㅎ -->
+    android:background="#ffffff">
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
