리스트뷰 100개 이상 로드

--- a/app/src/main/res/layout/activity_popup.xml
+++ b/app/src/main/res/layout/activity_popup.xml
@@ -35,7 +35,9 @@
         <TextView
             android:id="@+id/txtName"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:textSize="18sp"
+            android:textStyle="bold" />
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent">
